--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,11 @@
 #hisBox {
     margin: 5px;
 }
+
+#history {
+    margin: 10px;
+    border: 0px;
+    border-top: 5px;
+    border-style:double;
+    border-color: rgb(72, 95, 199);
+}
